# hackaburg23

./: Dockerfile  pyproject.toml
.streamlit/: config.toml
hackaburg23_frontend/: app.py  onepager.py  style.css
hackaburg23_frontend/assets/: style.css
hackaburg23_frontend/utils/: infer_new.py  ocr.py  thumbnail_creator.py
