[tool.poetry]
name = "hackaburg23-frontend"
version = "0.1.0"
description = ""
authors = ["", "", "", "", ""]
readme = "README.md"
packages = [{include = "hackaburg23_frontend"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.22.0"
st-click-detector = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
