[tool.poetry]
name = "hackaburg23-frontend"
version = "0.1.0"
description = ""
authors = ["Daud Taj <daud.taj@googlemail.com>"]
readme = "README.md"
packages = [{include = "hackaburg23_frontend"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
dash = "^2.10.0"
dash-bootstrap-components = "^1.4.1"
dash-extensions = "^1.0.1"
pytesseract = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
